# agency

./: .coolclinerules  .env.example  .env.production  README.md  docker-compose.dev.yml  docker-compose.yml  package.json  tsconfig.json  turbo.json
.devcontainer/: Dockerfile  devcontainer.json
.snippets/: ai-reasoning-chat (1).tsx  conversation-explorer (1).tsx  conversation-explorer.tsx  crew-ai-chat-interface.tsx  multi-column-chat-ui (1).tsx  multi-column-chat-ui.tsx
apps/api/: index.ts  package.json
apps/api/routes/: crewai.ts
apps/api/src/: index.ts
apps/gradio/: .env.example  Dockerfile  README.md  main.py  package.json  requirements.txt
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts
apps/web/src/: App.tsx
backend/: index.js  package-lock.json  package.json
backend/routes/: agent.js  conversation.js  crew.js  task.js  user.js
backend/services/: index.ts
crews/mywordpresscrew/: README.md  pyproject.toml
crews/mywordpresscrew/src/: my_crew.yaml
crews/mywordpresscrew/src/mywordpresscrew/: crew.py  export.py  main.py
crews/mywritingcrew/: README.md  pyproject.toml
crews/mywritingcrew/src/mywritingcrew/: crew.py  main.py
crews/mywritingcrew/src/mywritingcrew/config/: agents.yaml  tasks.yaml
crews/personasynth/: README.md  pyproject.toml
crews/personasynth/src/personasynth/: crew.py  main.py
crews/personasynth/src/personasynth/config/: agents.yaml  tasks.yaml
crews/personasynth/src/personasynth/tools/: custom_tool.py
crews/teddy_wordpress_writer/: README.md  pyproject.toml
crews/teddy_wordpress_writer/src/teddy_wordpress_writer/: crew.py  main.py
crews/teddy_wordpress_writer/src/teddy_wordpress_writer/config/: agents.yaml  tasks.yaml
docs/: architecture.md  crewai-cloner-plan.md  development.md  documentation_implementation_plan.md  documentation_style_guide.md  onboarding.md  ui-implementation-plan.md  user_manual.md
docs/templates/: README.md  advanced-guide-template.md  documentation-home-template.md  getting-started-template.md
docx/: more docs.md
docx/prompts/: README.md  agent_creation_content_writer.md  mvp_feature_sets.md  task_definition_market_research.md  workflow_content_creation_publishing.md
docx/prompts/feature_specs/: 04_task_management.md  05_workflow_orchestration.md  06_resource_management.md  07_conversation_management.md  08_integration_framework.md  (+6 more)
src/components/: CrewFactory.tsx
src/interfaces/: crew.ts
src/services/: connectionHandler.ts  demoMode.ts
src/store/: crewSlice.ts
src/utils/: localStorage.ts
(+7 files in other folders)
