[project]
name = "mywritingcrew"
version = "0.1.0"
description = "myWritingCrew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
mywritingcrew = "mywritingcrew.main:run"
run_crew = "mywritingcrew.main:run"
train = "mywritingcrew.main:train"
replay = "mywritingcrew.main:replay"
test = "mywritingcrew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
