[project]
name = "personasynth"
version = "0.1.0"
description = "personasynth using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
personasynth = "personasynth.main:run"
run_crew = "personasynth.main:run"
train = "personasynth.main:train"
replay = "personasynth.main:replay"
test = "personasynth.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
