[project]
name = "teddy_wordpress_writer"
version = "0.1.0"
description = "teddy_wordpress_writer using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
teddy_wordpress_writer = "teddy_wordpress_writer.main:run"
run_crew = "teddy_wordpress_writer.main:run"
train = "teddy_wordpress_writer.main:train"
replay = "teddy_wordpress_writer.main:replay"
test = "teddy_wordpress_writer.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
